actions: fix(lint): Fix yaml lint error

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -41,7 +41,7 @@ jobs:
         if: matrix.lint == 'python'
         run: |
           A=$(find . | grep .yml)
-          /usr/bin/yamllint action.yml
+          /usr/bin/yamllint action.yml .github/dependabot.yml .github/ISSUE_TEMPLATE/common.yml
 
       - name: Check yaml(JS)
         if: matrix.lint == 'js'
