--- a/rekernel/Makefile
+++ b/rekernel/Makefile
@@ -1,1 +1,7 @@
 obj-$(CONFIG_REKERNEL) += rekernel.o
+
+all:
+	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+
+clean:
+	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
