--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,8 @@ branding:
 
 inputs:
   kernel-url:
-    description: 'Kernel Source Url'
+    description: 'crdroidandroid/android_kernel_nvidia_kernel-nx'
+    description: 'crdroidandroid/android_kernel_nvidia_nvidia-nx'
     required: true
   depth:
     required: false
