--- a/rekernel/Kconfig
+++ b/rekernel/Kconfig
@@ -1,7 +1,14 @@
-menu "ReKernel"
+menu "Re:Kernel"
 
 config REKERNEL
-	tristate "ReKernel function support"
+	tristate "Re:Kernel support"
 	default y
 	help
-	  Enable ReKernel
+	  Make tombstone users get a better experience.
+
+config REKERNEL_NETWORK
+	tristate "Re:Kernel NetReceive unfreeze support"
+	default n
+	help
+	  Make tombstone users get a better experience.
+endmenu
