--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Build Kernel
         uses: dabao1955/kernel_build_action@main
         with:
-          kernel-url: https://github.com/AcmeUI-Devices/android_kernel_xiaomi_cas
+          kernel-url: https://github.com/PocoF3Releases/kernel_xiaomi_sm8250
           kernel-dir: msm-4.19
           kernel-branch: taffy
-          config: cas_defconfig
+          config: alioth_defconfig
           arch: arm64
           aosp-gcc: true
           aosp-clang: true
