actions: Update DTB/O copy logic
Signed-off-by: Vayruz Rafli <mikhailovnakowalski@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -599,8 +599,19 @@ runs:
                 cp out/arch/${{ inputs.arch }}/boot/Image AnyKernel3/ -rv
             fi
 
-            test -f out/arch/${{ inputs.arch }}/boot/dtbo.img && cp -v out/arch/${{ inputs.arch }}/boot/dtbo.img AnyKernel3/
-            test -f out/arch/${{ inputs.arch }}/boot/dtb && cp -v out/arch/${{ inputs.arch }}/boot/dtb AnyKernel3/
+            if [ -f out/arch/${{ inputs.arch }}/boot/dtbo.img ]; then
+                cp out/arch/${{ inputs.arch }}/boot/dtbo.img AnyKernel3/ -rv
+            else
+                echo "Failed to copy DTBO image. File not found."
+            fi
+
+            if [ -f out/arch/${{ inputs.arch }}/boot/dtb.img ]; then
+                cp out/arch/${{ inputs.arch }}/boot/dtb.img AnyKernel3/ -rv
+            elif [ -f out/arch/${{ inputs.arch }}/boot/dtb ]; then
+                cp out/arch/${{ inputs.arch }}/boot/dtb AnyKernel3/ -rv
+            else
+                echo "Failed to copy dtb. File not found."
+            fi
 
             rm -rf -v AnyKernel3/.git* AnyKernel3/README.md
             mkdir -p -v ../../build
