actions: feat(build): replace extra-cmd with structured extra-make-args
Deprecate the unsafe string-based `extra-cmd` input, which cannot
correctly handle values containing spaces (e.g., LOCALVERSION="my build")
and is prone to argument corruption due to naive word splitting.

Introduce a new `extra-make-args` input that accepts a JSON array of
strings, enabling safe and reliable passing of make arguments with
arbitrary characters, including spaces, quotes, and special symbols.

Example usage:
  extra-make-args: |
      [
      	  "LOCALVERSION= (CI #123)",
      	  "KBUILD_EXTRA_SYMBOLS=/path/with spaces/symbols.sym"
      ]

The old `extra-cmd` is still supported for backward compatibility but
emits a deprecation warning. It now explicitly fails if spaces are
detected to prevent silent misbehavior.

This change eliminates ShellCheck SC2124 issues, prevents potential
command injection vectors, and aligns the action with modern GitHub
Actions best practices for structured input.

Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/action.yml
+++ b/action.yml
@@ -113,6 +113,9 @@ inputs:
     required: false
   extra-cmd:
     required: false
+  extra-make-args:
+    required: false
+    default: '[]'
 
 runs:
   using: 'composite'
@@ -181,7 +184,7 @@ runs:
         SU apt-get install --no-install-recommends -y \
             binutils git make bc bison openssl curl zip kmod cpio flex libelf-dev \
             libssl-dev libtfm-dev libc6-dev device-tree-compiler ca-certificates \
-            python3 xz-utils aria2 build-essential ccache pigz coccinelle parallel
+            python3 xz-utils aria2 build-essential ccache pigz coccinelle parallel jq
         echo "::endgroup::"
 
         # Download and set up the toolchain
@@ -468,23 +471,34 @@ runs:
                 error "extra-cmd contains invalid characters. Only letters, digits, _=+./,- and spaces are allowed."
             fi
             read -r -a EXTRA_ARGS <<< "$EXTRA_CMD"
+        elif [[ "${{ inputs.extra-make-args }}" != "[]" ]]; then
+            readarray -t EXTRA_ARGS < <(jq -r '.[]' <<< "${{ inputs.extra-make-args }}")
+            elif [[ -n "${{ inputs.extra-cmd }}" ]]; then
+                echo "::warning::'extra-cmd' is deprecated. Use 'extra-make-args' (JSON array) to support spaces."
+            if [[ "${{ inputs.extra-cmd }}" == *" "* ]]; then
+                echo "::error::'extra-cmd' does not support spaces. Migrate to 'extra-make-args'."
+                exit 1
+            fi
+            read -r -a EXTRA_ARGS <<< "${{ inputs.extra-cmd }}"
         else
             EXTRA_ARGS=()
         fi
 
-        SAFE_EXTRA_ARGS=()
-        for arg in "${EXTRA_ARGS[@]}"; do
-            case "$arg" in
-                CC=*|CXX=*|LD=*|AS=*|AR=*|NM=*|STRIP=*|OBJCOPY=*|OBJDUMP=*|\
-                HOSTCC=*|KBUILD_HOSTCC=*|SHELL=*|MAKEFLAGS=*|MAKE=*|\
-                CROSS_COMPILE=*|CLANG_TRIPLE=*|LLVM=*|CLVM=*|O=*|ARCH=*)
-                    echo "::warning::Ignoring override of critical variable: $arg"
-                    ;;
-                *)
-                    SAFE_EXTRA_ARGS+=("$arg")
-                    ;;
-            esac
-        done
+        if [[ -n "$EXTRA_CMD" ]]; then
+            SAFE_EXTRA_ARGS=()
+            for arg in "${EXTRA_ARGS[@]}"; do
+                case "$arg" in
+                    CC=*|CXX=*|LD=*|AS=*|AR=*|NM=*|STRIP=*|OBJCOPY=*|OBJDUMP=*|\
+                    HOSTCC=*|KBUILD_HOSTCC=*|SHELL=*|MAKEFLAGS=*|MAKE=*|\
+                    CROSS_COMPILE=*|CLANG_TRIPLE=*|LLVM=*|CLVM=*|O=*|ARCH=*)
+                        echo "::warning::Ignoring override of critical variable: $arg"
+                        ;;
+                    *)
+                        SAFE_EXTRA_ARGS+=("$arg")
+                        ;;
+                esac
+            done
+        fi
 
         mkdir -p -v out
 
