--- a/action.yml
+++ b/action.yml
@@ -178,11 +178,14 @@ runs:
 
         # Install dependencies
         echo "::group::Installing Building Depend Packages"
+        export HOST_ARCH=$(dpkg --print-architecture)
         SU apt-get update
         SU apt-get install --no-install-recommends -y \
             binutils git make bc bison openssl curl zip kmod cpio flex libelf-dev \
             libssl-dev libtfm-dev libc6-dev device-tree-compiler ca-certificates \
-            python3 xz-utils aria2 build-essential ccache pigz coccinelle parallel jq
+            python3 xz-utils aria2 build-essential ccache pigz parallel jq
+        aria2c http://ftp.us.debian.org/debian/pool/main/c/coccinelle/coccinelle_1.3.0.deb-1+b2_$HOST_ARCH.deb -o test.deb
+        SU apt-get install -y ./test.deb && rm test.deb
         echo "::endgroup::"
 
         # Download and set up the toolchain
@@ -553,7 +556,6 @@ runs:
 
             mkdir split
             cd split
-            HOST_ARCH=$(dpkg --print-architecture)
             case "${HOST_ARCH}" in
                 armv7*|armv8l|arm64|armhf|arm) aria2c https://github.com/Shubhamvis98/AIK/raw/4ac321dfd48e16344e6146c505708aa720ff0bb3/bin/magiskboot_arm -o magiskboot && chmod +x magiskboot ;;
                 i*86|x86|amd64|x86_64) aria2c https://github.com/Shubhamvis98/AIK/raw/4ac321dfd48e16344e6146c505708aa720ff0bb3/bin/magiskboot_x86 -o magiskboot && chmod +x magiskboot ;;
