--- a/action.yml
+++ b/action.yml
@@ -183,9 +183,8 @@ runs:
         SU apt-get install --no-install-recommends -y \
             binutils git make bc bison openssl curl zip kmod cpio flex libelf-dev \
             libssl-dev libtfm-dev libc6-dev device-tree-compiler ca-certificates \
-            python3 xz-utils aria2 build-essential ccache pigz parallel jq
-        aria2c http://ftp.us.debian.org/debian/pool/main/c/coccinelle/coccinelle_1.3.0.deb-1+b2_$HOST_ARCH.deb -o test.deb
-        SU apt-get install -y ./test.deb && rm test.deb
+            python3 xz-utils aria2 build-essential ccache pigz parallel jq opam
+        opam install coccinelle
         echo "::endgroup::"
 
         # Download and set up the toolchain
