--- a/action.yml
+++ b/action.yml
@@ -182,7 +182,7 @@ runs:
         SU apt-get install --no-install-recommends -y \
             binutils git make bc bison openssl curl zip kmod cpio flex libelf-dev \
             libssl-dev libtfm-dev libc6-dev device-tree-compiler ca-certificates \
-            python3 xz-utils aria2 build-essential ccache pigz parallel jq opam
+            python3 xz-utils aria2 build-essential ccache pigz parallel jq opam libpcre3-dev
         echo "::endgroup::"
 
         # Download and set up the toolchain
