chore: Add comment to action.yml for PR demo
Updated the description for clarity in pull requests.

Signed-off-by: A. LAKSHMI PRASANNA <2400032275@kluniversity.in>

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,6 @@
 name: 'Android Kernel Build Action'
 description: "An action to build android kernel."
+# Updated description for pull request demo
 
 branding:
   icon: 'activity'
