actions: fix(BBG): Add endgroup echo for BBG initialization
Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/action.yml
+++ b/action.yml
@@ -395,6 +395,8 @@ runs:
             curl -Ss https://github.com/vc-teahouse/Baseband-guard/raw/main/setup.sh | bash
             sed -i '/^config LSM$/,/^help$/{ /^[[:space:]]*default/ { /baseband_guard/! s/lockdown/lockdown,baseband_guard/ } }' security/Kconfig
             echo "CONFIG_BBG=y" >> "$CONFIG_FILE"
+            echo "::endgroup::"
+        fi
 
         # Initialize Re-Kernel if enabled
         if [ "${{ inputs.rekernel }}" == "true" ]; then
