actions: fix(dep): Fix condition for package manager checks
Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/action.yml
+++ b/action.yml
@@ -175,7 +175,7 @@ runs:
             esac
         }
 
-        if [[ ${GITHUB_ACTIONS} != "true" || ${OSTYPE} != "linux-gnu" || ! -f /bin/apt || ! -f /bin/pacman ]]; then
+        if [[ ${GITHUB_ACTIONS} != "true" || ${OSTYPE} != "linux-gnu" || ( ! -f /bin/apt && ! -f /bin/pacman ) ]]; then
             error "This action is intended for Debian-based or ArchLinux-based runners."
         fi
 
