--- a/.github/workflows/close-pr.yml
+++ b/.github/workflows/close-pr.yml
@@ -27,9 +27,18 @@ jobs:
 
       - name: Close PR
         if: env.CHANGED == 'true'
-        run: |
-          curl -X PATCH \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            -d '{"state":"closed","body":"This PR has been automatically closed because it modifies \`.github/workflows/build.yml\`, which is a usage example, not part of the Action logic. Please do not submit PRs that modify workflow examples."}' \
-            "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}"
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.pulls.update({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.issue.number,
+              state: 'closed'
+            });
+            await github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: "This PR has been automatically closed because it modifies `.github/workflows/build.yml`, which is a usage example, not part of the Action logic."
+            });
